+ Add common service - Improve absolute paths in tsconfig.json - Fix too many requests to get characters of a film - Minor improves

--- a/src/app/movie-details/components/movie-details/movie-details.component.html
+++ b/src/app/movie-details/components/movie-details/movie-details.component.html
@@ -1,6 +1,5 @@
 <router-outlet></router-outlet>
 
-
 <div class="container text-center movie">
   <div class="row">
     <div class="col">
@@ -10,7 +9,7 @@
 
   <div class="row">
     <div class="col">
-      <img mat-card-image [src]="getMovieCover(movie?.title | titleFriendly | lowercase)">
+      <img mat-card-image [src]="movieCover">
     </div>
   </div>
 
