--- a/src/app/character/components/character-details/character-details.component.html
+++ b/src/app/character/components/character-details/character-details.component.html
@@ -26,7 +26,7 @@
   </div>
   
   <div class="row">
-    <div class="col-6 homeworld">
+    <div class="col-6 xs-12 homeworld">
       <mat-accordion>
         <mat-expansion-panel hideToggle>
           <mat-expansion-panel-header>
@@ -45,7 +45,7 @@
       </mat-accordion>
     </div>
 
-    <div class="col-6 films-related">
+    <div class="col-6 xs-12 films-related">
       <div class="row">
         <div class="col">
           <button
